--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,6 @@
 my.app.title=From Config Server  
+# Eureka Server URL
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#Generating instance ID
+eureka.instance.instance-id=${spring.application.name}:${random.value}
