--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
-my.app.title=From Config Server  
-# Eureka Server URL
+my.app.title=Hello 123
+# Provide Eureka Server URL(Ureka Location )
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 #Generating instance ID
