--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-my.app.title=Hello 123
+my.app.title=Sample 133
 # Provide Eureka Server URL(Ureka Location )
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
