--- a/application.properties
+++ b/application.properties
@@ -4,3 +4,10 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 #Generating instance ID
 eureka.instance.instance-id=${spring.application.name}:${random.value}
+
+#activate actuator 
+management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=health, beans
+
+#connect with admin server
+spring.boot.admin.client.url=http://localhost:9999
