--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-my.app.title=nochance
+my.app.title=hello app
 # Provide Eureka Server URL(Ureka Location )
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
